# udp_communicator

./: CMakeLists.txt  README.md  client.cpp  node_1.cpp  node_2.cpp  receive.cpp  send.cpp  server.cpp
include/: control_msg.hpp  msg_A.hpp  msg_B.hpp  observed_msg.hpp  udp_lib_linux.hpp  udp_lib_switcher.hpp  udp_lib_windows.hpp
src/: CMakeLists.txt  udp_lib.cpp  udp_lib.hpp
test/: CMakeLists.txt  client.cpp  msg_A.hpp  server.cpp
